--- a/package.json
+++ b/package.json
@@ -3,16 +3,15 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node index.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": "",
+  "description": "PDF converter API with text and HTML support",
   "dependencies": {
     "express": "^4.21.2",
-    "pdfkit": "^0.16.0",
-    "puppeteer": "^24.4.0",
-    "puppeteer-core": "^24.4.0"
+    "html-pdf-node": "^1.0.8",
+    "pdfkit": "^0.16.0"
   }
 }
