--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,25 @@
+# Dependencies
 node_modules/
+package-lock.json
+
+# Environment
 .env
+.env.local
+.env.*.local
+
+# Output files
 *.pdf
+dist/
+build/
+
+# System files
 .DS_Store
-npm-debug.log
-yarn-debug.log
-yarn-error.log
+.idea/
+.vscode/
+
+# Logs
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+logs/
+*.log
