--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   "license": "ISC",
   "description": "PDF converter API with text and HTML support",
   "dependencies": {
-    "express": "^4.21.2",
-    "html-pdf-node": "^1.0.8",
-    "pdfkit": "^0.16.0"
+    "cors": "^2.8.5",
+    "express": "^4.18.2",
+    "handlebars": "^4.7.7",
+    "pdf-lib": "^1.17.1",
+    "puppeteer": "^24.6.0"
   }
 }
